--- a/templates/demo.html
+++ b/templates/demo.html
@@ -1,37 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bootstrap Table with Sorting</title>
   <!-- Bootstrap CSS -->
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-  >
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Bootstrap Table CSS -->
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/bootstrap-table@1.21.3/dist/bootstrap-table.min.css"
-  >
+  <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.21.3/dist/bootstrap-table.min.css">
+  <style>
+    /* Container for the iframe */
+    .responsive-iframe-container {
+      position: relative;
+      width: 100%;
+      /* Full width */
+      padding-top: 56.25%;
+      /* Aspect ratio: 16:9 */
+      /* Optional fallback for screens with different aspect ratios */
+      max-height: 90vh;
+      /* Limit to 90% of viewport height */
+    }
+
+    /* The iframe */
+    .responsive-iframe-container iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      /* Full width of the container */
+      height: 100%;
+      /* Full height of the container */
+      border: 0;
+      /* Remove borders */
+    }
+  </style>
 </head>
-<body>
+
+<body style="background-color: #ccc ;">
   <div class="container mt-5">
+    <!-- <div class="container-xxl" style="height: 300px;">
+      <iframe src="https://1drv.ms/p/c/f7bcf1f0fc4c4a13/IQSdc1P6zrCcQqJ-5Sm4E--bAf_4_5dGQwsRK10RZCbGqao?em=2&amp;wdAr=1.7777777777777777" width="100%" height="100%" style="min-height: 100px;" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
+    </div> -->
+    <div class="responsive-iframe-container">
+      <iframe style="border: #000 solid 2px;"
+        src="https://1drv.ms/p/c/f7bcf1f0fc4c4a13/IQSdc1P6zrCcQqJ-5Sm4E--bAf_4_5dGQwsRK10RZCbGqao?em=2&amp;wdAr=1.7777777777777777"
+        allowfullscreen>
+      </iframe>
+    </div>
+    <div class="responsive-iframe-container">
+      <iframe src="https://1drv.ms/b/c/f7bcf1f0fc4c4a13/IQTNLRjPjs4mQqavqyZPBqIOAe5BaWN3zYVQSwqgkNfMDoY"
+        allowfullscreen></iframe>
+    </div>
     <h2>Sortable Bootstrap Table</h2>
-    <table
-      id="table"
-      class="table table-striped"
-      data-toggle="table"
-      data-sortable="true"
-      data-pagination="true"
-      data-page-size="2"
-      data-search="true"
-    >
+    <table id="table" class="table table-striped" data-toggle="table" data-sortable="true" data-pagination="true"
+      data-page-size="2" data-search="true">
       <thead>
         <tr>
-          <th  data-sortable="true">ID</th>
-          <th >Name</th>
-          <th >Age</th>
+          <th data-sortable="true">ID</th>
+          <th>Name</th>
+          <th>Age</th>
         </tr>
       </thead>
       <tbody>
@@ -61,4 +89,5 @@
   <!-- Bootstrap Table JS -->
   <script src="https://unpkg.com/bootstrap-table@1.21.3/dist/bootstrap-table.min.js"></script>
 </body>
+
 </html>
